tests/neg-custom-args/captures/sep-curried.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/sep-curried.scala:48:43 ----------------------------------
48 |  val f: (y: Ref[Int]^{a}) ->{a} Unit = foo(a) // error
   |                                        ^^^^^^
   |                                        Found:    (y: Ref[Int]^{any}) ->{a} Unit
   |                                        Required: (y: Ref[Int]^{a}) ->{a} Unit
   |
   |                                        Note that capability `a` is not included in capture set {any}.
   |
   |                                        where:    any is the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/sep-curried.scala:16:6 --------------------------------------------------------
16 |  foo(a)(a)  // error
   |      ^
   |Separation failure: argument of type  (a : Ref[Int]^)
   |to method foo: (x: Ref[Int]^)(y: Ref[Int]^{a}): Unit
   |corresponds to capture-polymorphic formal parameter x of type  Ref[Int]^²
   |and hides capabilities  {a}.
   |Some of these overlap with the captures of the second argument with type  (a : Ref[Int]^).
   |
   |  Hidden set of current argument        : {a}
   |  Hidden footprint of current argument  : {a}
   |  Capture set of second argument        : {a}
   |  Footprint set of second argument      : {a}
   |  The two sets overlap at               : {a}
   |
   |where:    ^  refers to a root capability classified as Unscoped in the type of value a
   |          ^² refers to a root capability classified as Unscoped created in method test0 when checking argument to parameter x of method foo
-- Error: tests/neg-custom-args/captures/sep-curried.scala:22:44 -------------------------------------------------------
22 |  val f: (y: Ref[Int]^{a}) ->{a} Unit = foo(a) // error
   |                                            ^
   |Separation failure: argument of type  (a : Ref[Int]^)
   |to a function of type (x: Ref[Int]^) -> (y: Ref[Int]^{a}) ->{x} Unit
   |corresponds to capture-polymorphic formal parameter x of type  Ref[Int]^²
   |and hides capabilities  {a}.
   |Some of these overlap with the captures of the function result with type  (y: Ref[Int]^{a}) ->{a} Unit.
   |
   |  Hidden set of current argument        : {a}
   |  Hidden footprint of current argument  : {a}
   |  Capture set of function result        : {a}
   |  Footprint set of function result      : {a}
   |  The two sets overlap at               : {a}
   |
   |where:    ^  refers to a root capability classified as Unscoped in the type of value a
   |          ^² refers to a root capability classified as Unscoped created in value f when checking argument to parameter x of method apply
-- Error: tests/neg-custom-args/captures/sep-curried.scala:29:6 --------------------------------------------------------
29 |  foo(a)(a)  // error
   |      ^
   |Separation failure: argument of type  (a : Ref[Int]^)
   |to a function of type (x: Ref[Int]^) -> (y: Ref[Int]^{a}) ->{x} Unit
   |corresponds to capture-polymorphic formal parameter x of type  Ref[Int]^²
   |and hides capabilities  {a}.
   |Some of these overlap with the captures of the function result with type  (y: Ref[Int]^{a}) ->{a} Unit.
   |
   |  Hidden set of current argument        : {a}
   |  Hidden footprint of current argument  : {a}
   |  Capture set of function result        : {a}
   |  Footprint set of function result      : {a}
   |  The two sets overlap at               : {a}
   |
   |where:    ^  refers to a root capability classified as Unscoped in the type of value a
   |          ^² refers to a root capability classified as Unscoped created in method test2 when checking argument to parameter x of method apply
-- Error: tests/neg-custom-args/captures/sep-curried.scala:35:9 --------------------------------------------------------
35 |  foo(a)(a)  // error
   |         ^
   |Separation failure: argument of type  (a : Ref[Int]^)
   |to a function of type (y: Ref[Int]^) ->{a} Unit
   |corresponds to capture-polymorphic formal parameter y of type  Ref[Int]^²
   |and hides capabilities  {a}.
   |Some of these overlap with the captures of the function prefix.
   |
   |  Hidden set of current argument        : {a}
   |  Hidden footprint of current argument  : {a}
   |  Capture set of function prefix        : {a}
   |  Footprint set of function prefix      : {a}
   |  The two sets overlap at               : {a}
   |
   |where:    ^  refers to a root capability classified as Unscoped in the type of value a
   |          ^² refers to a root capability classified as Unscoped created in method test3 when checking argument to parameter y of method apply
-- Error: tests/neg-custom-args/captures/sep-curried.scala:42:4 --------------------------------------------------------
42 |  f(a) // error
   |    ^
   |Separation failure: argument of type  (a : Ref[Int]^)
   |to a function of type (y: Ref[Int]^) ->{a} Unit
   |corresponds to capture-polymorphic formal parameter y of type  Ref[Int]^²
   |and hides capabilities  {a}.
   |Some of these overlap with the captures of the function prefix.
   |
   |  Hidden set of current argument        : {a}
   |  Hidden footprint of current argument  : {a}
   |  Capture set of function prefix        : {f}
   |  Footprint set of function prefix      : {f, a}
   |  The two sets overlap at               : {a}
   |
   |where:    ^  refers to a root capability classified as Unscoped in the type of value a
   |          ^² refers to a root capability classified as Unscoped created in method test4 when checking argument to parameter y of method apply
